-bug#0001145: Save Failed error when changing Graph Details
-bug#0001147: Cactid doesn't trim white space from data template OIDs 
-bug#0001166: Installer does not properly handle disabled guest_user conversion
-bug#0001174: Unidentified index warning
-bug#0001176: Problem validating IPv6 addresses
-bug#0001191: Faulty IP address validation by ping.php script
-bug#0001204: since upgrade to 0.87b the hosts with ip address with 255 are down and have no datas
-bug#0001206: wrong "include" statements replaced by "include_once" (was: Graphs are not Zoom-able)
-bug#0001211: Allow use of "REMOTE_USER" if "PHP_AUTH_USER" is not set for authenication
-bug#0001213: Template Copy does not hash copied template_items 
-bug#0001215: Impossible to define a none availability with the client cli/add_device.php
-bug#0001216: CSV Export for zoomed graph, results in Validation error
-bug#0001217: Default Graph Tree is not reflected in Left Pane of the graph page
-bug#0001223: Missing Hard return on last GPRINT causes bad formatting
-bug#0001228: LDAP server port not honored 
-bug#0001230: poller stops updating rrd files
-bug#0001236: set 'stats_recache' to zero when no re-index is present
-bug#0001240: SNMP string cleanup removes too many '=' signs
-bug#0001244: missing closing </form> on host.php
-bug#0001247: snmp ping won't work for snmp v3
-bug#0001256: Spine-poller.c : Bug in size string sysUptime 
-bug#0001258: "Remove Verification" is an ambiguous definition, leads to data loss
-bug#0001259: LDAP Authentication using Solaris 10 standard ldap client fails
-bug#0001262: Do not allow deletion of Graph Export User
-bug#0001268: resource/snmp_queries/net-snmp_disk.xml has incorrect name for "Percent Available"
-bug#0001273: Escape windows paths to accomodate spaces
-bug#0001281: ICMP Ping fails if an octet == 255
-bug#0001286: poller_item cache is not updated when "Data Input Method" is changed 
-bug#0001288: A host with ICMP ping selected as method does not properly perform ping